--- a/templates/home.html
+++ b/templates/home.html
@@ -10,17 +10,17 @@
             margin: 10;
             font-family: Arial, sans-serif;
             background: #fbf8fb;
-            color: #b67eb9;
+            color: #ab3fb1;
         }
         .hero-image {
-            height: 80vh;
+            height: 60vh;
             background-image: url('https://via.placeholder.com');
             background-size: cover;
             background-position: center;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: rgb(240, 188, 236);
+            color: rgb(189, 170, 187);
             text-shadow: 0 0 10px rgba(129, 127, 127, 0.7);
         }
         .hero-text {
@@ -30,13 +30,13 @@
         .post-preview {
             background-color: #ece1eb;
             padding: 25px;
-            margin: 50px1000;
+            margin: 50px100;
         }
         .post-preview img {
             width: 100%;
             height: auto;
             border-bottom: 10px solid #f0f4f6;
-            margin-bottom: 200px;
+            margin-bottom: 20px;
         }
         .blog-footer {
             padding: 70px 1000;
