--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@
         }
         .hero-image {
             height: 60vh;
-            background-image: url('https://via.placeholder.com/1500x500');
+            background-image: url('');
             background-size: cover;
             background-position: center;
             display: flex;
@@ -46,11 +46,11 @@
         }
         .gallery img {
             margin: 5px;
-            width: calc(33% - 10px);
+            width: calc(33% - 8px);
             height: auto;
         }
         .blog-footer {
-            padding: 70px 100px;
+            padding: 70px1000px;
             background-color: #ecbff1;
             color: #781378;
             text-align: center;
@@ -74,9 +74,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjLTp4U34GTysGy5mw1jIbtf7xb7voufwDCpz-MpqrzbC8W_iXVBvosD0QXwXEuFar_VJ7WC_q9u9kqvlGImBZwBYbggUB6Q5IlqgO-RAlARN9uxwFbf7iVn3fFpKV8fohohWQzHPTtafac_yxw2dvE-jYZ9M_pVPhvfTTaTk5RU-btxi0lNu4fcjxECqcF/s320/Black%20and%20White%20Minimalist%20Professional%20Initial%20Logo.png" alt="Logo" style="height: 100px; width: auto;""> <!-- Replace URL with your actual logo URL -->
-            </a>
+         <a class="navbar-brand" href="#">elsa asdar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -91,6 +89,11 @@
             </div>
         </div>
     </nav>
+    <div class="hero-image">
+        <div class="hero-text">
+            <h1>About</h1>
+        </div>
+    </div>
     <!-- The rest of your HTML remains unchanged -->
     <div class="container">
         <div class="content-section">
