--- a/templates/home.html
+++ b/templates/home.html
@@ -60,8 +60,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">
-            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjLTp4U34GTysGy5mw1jIbtf7xb7voufwDCpz-MpqrzbC8W_iXVBvosD0QXwXEuFar_VJ7WC_q9u9kqvlGImBZwBYbggUB6Q5IlqgO-RAlARN9uxwFbf7iVn3fFpKV8fohohWQzHPTtafac_yxw2dvE-jYZ9M_pVPhvfTTaTk5RU-btxi0lNu4fcjxECqcF/s320/Black%20and%20White%20Minimalist%20Professional%20Initial%20Logo.png" alt="Logo" style="height: 100px; width: auto;""> <!-- Replace URL with your actual logo URL -->
+            <a class="navbar-brand" href="#">elsa asdar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
