--- a/templates/blog.html
+++ b/templates/blog.html
@@ -84,19 +84,18 @@
             <div class="blog-post">
                 <h2>Dasar-Dasar Menjahit: Panduan untuk Pemula</h2>
                 <p> Memulai perjalanan menjahit Anda mungkin terasa menakutkan, tetapi dengan alat yang tepat dan teknik dasar, hobi ini bisa menjadi kegiatan yang menyenangkan dan memuaskan. Postingan ini mencakup segalanya mulai dari memilih mesin jahit pertama Anda hingga memahami berbagai jenis jahitan dan kegunaannya. Sangat cocok untuk pemula yang ingin mencoba dunia kerajinan tangan!!</p>
-                <a href="#" class="btn btn-primary">Read More</a>
-                 <img src=" 1">
+                <a href="https://www.youtube.com/watch?v=O6kxl7ysN8g&pp=ygUqRGFzYXItRGFzYXIgTWVuamFoaXQ6IFBhbmR1YW4gdW50dWsgUGVtdWxh" class="btn btn-primary">Read More</a>
             </div>
             <div class="blog-post">
-                <h2>10 Trik Menjahit yang Harus Diketahui Setiap Penggemar</h2>
+                <h2>Trik Menjahit yang Harus Diketahui Setiap Penggemar</h2>
                 <p>Baik Anda pemula atau penjahit berpengalaman, trik menjahit cerdas ini dapat menghemat waktu Anda dan membuat proyek Anda terlihat lebih profesional. Mulai dari menggunakan kertas freezer sebagai panduan menjahit hingga menguasai cara cepat memasukkan benang ke jarum, tips ini akan meningkatkan efisiensi dan kesenangan menjahit Anda.</p>
-                <a href="#" class="btn btn-primary">Read More</a>
+                <a href="https://www.youtube.com/watch?v=sByGkPePptM&pp=ygUNVHJpayBNZW5qYWhpdA%3D%3D" class="btn btn-primary">Read More</a>
             </div>
             <div class="blog-post">
                 <h2>Cara Memilih Kain untuk Proyek Anda</h2>
                 <p>Memilih kain yang tepat sangat penting untuk setiap proyek menjahit. Panduan ini akan membantu Anda memahami berbagai jenis kain dan cara memilih yang terbaik untuk proyek spesifik Anda, baik itu gaun musim panas yang ringan atau ransel yang tahan lama.
                 </p>
-                <a href="#" class="btn btn-primary">Read More</a>
+                <a href="https://www.youtube.com/watch?v=tLyvtev_zbM&pp=ygUSQ2FyYSBNZW1pbGloIEthaW4g" class="btn btn-primary">Read More</a>
             </div>
         </div>
     </div>
