--- a/templates/product.html
+++ b/templates/product.html
@@ -63,6 +63,12 @@
         .btn-primary:hover {
             background-color: #9a3da1; /* Darken the color slightly on hover */
         }
+        .card img {
+            width: 100%;    /* Menetapkan lebar gambar agar selalu penuh sesuai container */
+            height: 500px;  /* Menetapkan tinggi tetap untuk semua gambar */
+            object-fit: cover; /* Memastikan gambar menutupi area yang ditentukan tanpa distorsi */
+        }
+
     </style>
 </head>
 <body>
@@ -76,8 +82,8 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="/#/">Home</a>
                     <a class="nav-link" href="/about/">About</a>
-                    <a class="nav-link" href="/product/">Product</a>
                     <a class="nav-link" href="/blog/">Blog</a>
+                    <a class="nav-link" href="/product/">Product</a>
                     <a class="nav-link" href="/contact/">Contact</a>
                 </div>
             </div>
@@ -95,11 +101,11 @@
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh2Wp0ID6r4YaxrlnNjsxCzBrIdZD4T219zDhN5cFBxmINo7bY6XSPJrcs4uCBr8sLi4r7w7j-I2wQeuWQDoLd4hwnIGK5SbAAAe0_bBgOpwVdzXIH71SxRPpyCpEEQvm-sKoNZ6w98-BKDTutWAaltYpw16LhR8TkAXlu0EYEU7tTw2yXYGo6PCofGV6mi/s6000/464f93bab7c0f2a47fac6cb69c4da6d8-removebg-preview.png 1">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgl4zfcwhUV0JPRCvhEcPeP3ZNWHxCLJ7e_6JqpH3TJZgOQS2GDIx1jhbbJwJcQU7mQOoIoe5iG5zwGq6B_H6-slrBO5j2PbOkn0eomlVT2yTwNTLyO1H8R2tBUQ56hbefVX2Dq4C5fkJ3cTUc0X5S6poKN-8AUNLtMxSnmSMhmbIrZSJB043BwHWu80tRU/s6000/120b27fe83a7b195ad88ffd71f3fec7d-removebg-preview.png 1">
                     <div class="card-body">
                         <h5 class="card-title">Dress</h5>
-                        <p class="card-text">This is a short description of Product 1. It's an amazing product that offers great value.</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <p class="card-text"></p>
+                        <a href="/product_dress/" class="btn btn-primary">View Details</a>
                     </div>
                 </div>
             </div>
@@ -108,17 +114,17 @@
                     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhkDDZD-_uBpDHMb9u7r0It9rdZg3TBoU4r1REzl4MSGpwrStJfP1twGr5sxEyGZxf18EB2t4p78s_cCnhieuUaGUR8PNl79Wove9lGTRxBaoLbIVt-htJbdtgj-ZV1Nfht8c_ztBqukSNd28vbyw_KuHIjqlG7QCiZQx641P9FZkb0zKMVWUvTLV7FtBf4/s6000/feca75d038fb6d55572f6d7db2e7b151-removebg-preview.png 2">
                     <div class="card-body">
                         <h5 class="card-title">Blous</h5>
-                        <p class="card-text">Description for Product 2. Ideal for those who love great aesthetics and functionality.</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <p class="card-text"></p>
+                        <a href="/product_blous/" class="btn btn-primary">View Details</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhdQPY9jj3yln-mcgaNNbNsD2p3SFaD0ypW0B-P_jp_GMAqTZ4oHioCY75XBcUig3_uFBqnXd-3AwNdbyha2ZJwi-sKnA6SI1D6C2g-Th3_-Qe3GUfp7D1CpJk9oO0bPJxJ7TH71KxMbs5_809SGv6V3Q7tmcZKLPaxMX_nNMdMCt7u9yhsDj_cK1V_Dm2U/s6000/52ffdc1ca5779c9909b00f164d16ad22-removebg-preview.png  3">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh54r3-oSdSzw7NjGkDExHsEtPYcRqaJWa3gIs65QE-K1j8Fq8pwMFP_E_fG257zmgLK8wo_Pxi3H3p2fbwe6XSQBLWLS1DyaSCUErJL4VyuNcLvudWZYjXHzRHoSle3mB2vO2pPJiuj76k0Wi794DVDk1tZzM2WiwxHJjj8UqL76CaN6rj3O_kqEBeAH8d/s6000/e117d06c84b077e1bb810cc9cc3cbb42-removebg-preview.png 3">
                     <div class="card-body">
-                        <h5 class="card-title">Tunik</h5>
-                        <p class="card-text">Description for Product 3. Ideal for those who love great aesthetics and functionality.</p>
+                        <h5 class="card-title">Kemeja</h5>
+                        <p class="card-text"></p>
                         <a href="#" class="btn btn-primary">View Details</a>
                     </div>
                 </div>
