--- a/templates/home.html
+++ b/templates/home.html
@@ -60,7 +60,8 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">elsa asdar</a>
+            <a class="navbar-brand" href="#">
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiZTCYsgpund9P10YCojUNw391SpZTU2IiTBeROjFswu6OoJF4fDU8X-M0nmZJhqpX4XQVJaR-HIqR_44H7aAtwm8vHq8_VS5BZ-1IAaUaaZ8780UmZ3Ra82tkfLdwLcIWUvNz4Kk9S5IkYkDriGz5IcmvXhDwkntSMdcZDfieLxQtT64-Y3NZDBNyCJict/s1000/Brown_Modern_Minimalist_Tailor_Shop_Logo-removebg-preview.png" alt="Logo" style="height: 100px;">   
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
